# Platooning-F1Tenth

./: .gitignore  Dockerfile  Dockerfile2  Dockerfile3  LICENSE  README.md  build_docker.sh  dlenv.yml  docker-compose.yml  end_to_end_compose.yml  environment.yml  gazebo_headless.sh  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  run_xvfb.sh  setup.sh  setup_cuda_ros_opencv_conda.sh
src/ackermann_cmd_mux/: CMakeLists.txt  package.xml
src/computer_vision/: CMakeLists.txt  README.md  package.xml  setup.py
src/computer_vision/evaluation/: analyze_classification_model.py  analyze_discrete.py  analyze_e2e.py  test_model_classification.py
src/computer_vision/input_output/: hdf5datasetgenerator.py  hdf5datasetwriter.py
src/computer_vision/launch/: end_to_end.launch
src/computer_vision/logs/: model_0_report.txt  model_1_report.txt  model_2_report.txt
src/computer_vision/nodes/: ensemble_manager.py  image_listener.py  multi_image_listener.py  ros_classifier.py  ros_classifier_fused.py  ros_daev.py  ros_dave.py  ros_ensemble_node.py  ros_transfer_imagenet.py  synchronize_img_command.py  synchronize_img_command_lidar.py
src/computer_vision/notebooks/: EvaluateDaev.ipynb  Evaluate_e2e_bag.ipynb  evluate_e2e_bag.ipynb
src/computer_vision/preprocessing/: aspectawarepreprocessor.py  croppreprocessor.py  imagetoarraypreprocessor.py  meanpreprocessor.py  patchpreprocessor.py  simplepreprocessor.py  utils.py
src/computer_vision/scripts/: combine_models.py  create_data_hdf5.py  polyak_averaging_test.py
src/computer_vision/training/: augmentation_demo.py  hyperparameter_search_classification.py  train_classifation_from_hdf5.py  train_classification_model.py  train_classification_model_lidar.py  train_daev_model.py  train_dave_model.py  train_ensemble_classifier.py  training_logs.txt  transfer_classifier.py  transfer_vgg.py
src/f110_rrt_star/: CMakeLists.txt  package.xml
src/f110_rrt_star/config/: config.yaml
src/f110_rrt_star/launch/: f110_rrt.launch
src/f110_rrt_star/sensor_data/: track_porto.csv
src/f110_rrt_star/src/: rrt.cpp
src/mpc/: CMakeLists.txt  README.md  package.xml  setup.sh
src/mpc/batch_scripts/: run_experiments.sh  run_obstacle_experiments.sh
src/mpc/launch/: dynamic_boxes_launch.launch  mpc.launch  mpc_batch.launch
src/mpc/logs/: 5  IFM.ipynb  collisions_disparity_extender_2_0_1.0_true_cones.csv  collisions_disparity_extender_2_0_cones.csv  collisions_disparity_extender_2_5_0.5_false_cones.csv  collisions_disparity_extender_2_5_1.5_true_cones.csv  collisions_disparity_extender_2_5_cones.csv  collisions_disparity_extender_3_0_1.5_true_cones.csv  collisions_disparity_extender_3_5_cones.csv  collisions_e2e_2_0_0.025_0.025_cones.csv  collisions_e2e_2_0_0.025_0.05_cones.csv  collisions_e2e_2_0_0.025_0.075_cones.csv  collisions_e2e_2_0_0.025_0.2_cones.csv  collisions_e2e_2_0_0.05_0.075_cones.csv  collisions_e2e_2_0_0.05_0.125_cones.csv  collisions_e2e_2_0_0.05_0.1_cones.csv  collisions_e2e_2_0_0.05_0.2_cones.csv  collisions_e2e_2_0_0.075_0.05_cones.csv  collisions_e2e_2_0_0.075_0.075_cones.csv  collisions_e2e_2_0_0.075_0.125_cones.csv  collisions_e2e_2_0_0.075_0.175_cones.csv  collisions_e2e_2_0_0.075_0.2_cones.csv  collisions_e2e_2_0_0.125_0.025_cones.csv  collisions_e2e_2_0_0.125_0.125_cones.csv  collisions_e2e_2_0_0.125_0.1_cones.csv  collisions_e2e_2_0_0.125_0.2_cones.csv  collisions_e2e_2_0_0.15_0.025_cones.csv  collisions_e2e_2_0_0.15_0.05_cones.csv  collisions_e2e_2_0_0.15_0.125_cones.csv  collisions_e2e_2_0_0.15_0.15_cones.csv  collisions_e2e_2_0_0.15_0.175_cones.csv  collisions_e2e_2_0_0.15_0.1_cones.csv  collisions_e2e_2_0_0.175_0.025_cones.csv  collisions_e2e_2_0_0.175_0.05_cones.csv  collisions_e2e_2_0_0.175_0.075_cones.csv  collisions_e2e_2_0_0.175_0.15_cones.csv  collisions_e2e_2_0_0.175_0.175_cones.csv  collisions_e2e_2_0_0.175_0.1_cones.csv  collisions_e2e_2_0_0.1_0.05_cones.csv  collisions_e2e_2_0_0.2_0.15_cones.csv  (+88 more)
src/mpc/scripts/: collision_logger.py  compute_track_progress.py  computing_hyperplanes.py  computing_hyperplanes_final.py  computing_hyperplanes_left.py  computing_hyperplanes_right.py  constants.py  mpc_bicycle.py  mpc_drive.py  mpc_drive_hyperplanes.py  mpc_gen.py  mpcc_hyperplanes.py  point.py  solving.py  solving_bottom.py  solving_upper.py  template_model.py  template_model_bicycle.py  template_model_black_box.py  template_model_hype.py  template_mpc.py  template_mpc_black_box.py  template_mpc_hyperplanes.py  test.py  visualize_point.py  visualize_point_2.py  visualize_points.py
src/multiple-object-tracking-lidar/: CMakeLists.txt  README.md  package.xml
src/multiple-object-tracking-lidar/src/: main.cpp
src/pure_pursuit/: CMakeLists.txt  README.md  package.xml
src/pure_pursuit/launch/: collect_waypoints.launch  pure_pursuit.launch  pure_pursuit_particle_filter.launch  pure_pursuit_race.launch  pure_pursuit_sim.launch
src/pure_pursuit/maps/: track_2.pgm
src/pure_pursuit/rviz_cfg/: particle_filter.rviz  pure_pursuit.rviz  pure_pursuit_sim.rviz
src/pure_pursuit/scripts/: pure_pursuit.py  pure_pursuit_angle.py  pure_pursuit_lab.py  remap_gazebo_pose.py  visualize_markers.py  waypoint_logger_pure_pursuit.py
src/pure_pursuit/waypoints/: .waypoints.csv.swp  levine-waypoints.csv  levine-waypoints2.csv  porto_waypoints.csv  racecar_tunnel_26520.csv  racecar_walker_28998.csv  racecar_walker_29418.csv  track_barca_4676.csv  track_barca_47396.csv  track_porto_26780.csv  track_porto_27216.csv  track_porto_29506.csv  track_porto_31492.csv
src/race/: CMakeLists.txt  README.md  package.xml
src/race/batch_scripts/: run_aij_experiments.sh  run_batch.sh  run_control_experiments.sh  run_dynamic_obstacle_uncertainty.sh  run_e2e_model_comparison.sh  run_model_comparison_obstacles.sh  run_model_safety_comparison.sh  run_uncertainty_experiments.sh  run_uncertainty_experiments_reach_time.sh  run_uncertainty_experiments_simplex.sh
src/racecar/: CMakeLists.txt  package.xml
src/rl/: CMakeLists.txt  README.md  package.xml  setup.py
src/rl/nodes/: ddpg.py  (+1 more)
src/rtreach/: CMakeLists.txt  README.md  package.xml
(+2532 files in other folders)
