<?xml version="1.0"?>
<package format="3">
  <name>computer_vision</name>
  <version>1.0.0</version>
  <description>The computer_vision package</description>

  <!-- Maintainer -->
  <maintainer email="patrick.musau17@gmail.com">Patrick Musau</maintainer>

  <license>MIT</license>


  <depend>message_generation</depend>
  <depend>message_runtime</depend>  
  <depend>tf</depend>
  <depend>catkin</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
</package>
