<?xml version="1.0"?>
<package format="3">
  <name>f110_rrt_star</name>
  <version>0.0.0</version>
  <description>The rrt star package for F110 Autonomous Car</description>  <!-- One maintainer tag required, multiple allowed, one person per tag -->


  <!-- Maintainer -->
  <maintainer email="yasht@seas.upenn.edu">Yash Trikannad</maintainer>

  <!-- License -->
  <license>MIT</license>



  <buildtool_depend>catkin</buildtool_depend>
  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>

</package>
