<?xml version="1.0"?>
<package format="3">
  <name>multi_object_tracking_lidar</name>
  <version>1.0.3</version>
  <description>ROS package for Multiple objects detection, tracking and classification from LIDAR scans/point-clouds</description>

  <!-- Maintainer -->
  <maintainer email="praveen.palanisamy@outlook.com">Praveen Palanisamy</maintainer>


  <!-- License -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>cv_bridge</depend>

</package>
