<?xml version="1.0"?>
<package format="3">
  <name>rl</name>
  <version>0.0.0</version>
  <description>The reinforcement learning package</description>

  <maintainer email="nathaniel.p.hamilton@vanderbilt.edu">Nathaniel Hamilton</maintainer>


  <license>MIT</license>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>  
  <depend>tf</depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
</package>
