<?xml version="1.0"?>
<package format="3">
  <name>racecar_control</name>
  <version>0.0.0</version>
  <description>The racecar_control package</description>

  <!-- Maintainer -->
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>


  <!-- License -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>